Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123551

[Boot2Qt] A windows is blacked out in QQuickWidget Example application

XMLWordPrintable

    • Linux/Other display system
    • 88aa5250d (dev), fb6cfadc3 (6.8), 8c83c0241 (6.7), dc73c26e8 (tqtc/lts-6.5)

      Host: Windows 11
      Qt Creator: Qt Creator 12.0.1
      Target: Toradex Apalis iMX6

      Steps to reproduce:
        Run Qt QQuickWidget Example (quickwidget) on Toradex Apalis iMX6

      Expected:
        A rotating red rectangle is displayed in the right window.

      Actual:
        The right window is blacked out and it does not show anything.
        (See attached quickwidget_6_5_5.jpg)

      Reproducibility:
        100% 

      Supplementaly information:
        The red rectangle shows up by setting the following environmental variable: 
          qputenv("QMLSCENE_DEVICE", "softwarecontext");

       

        For Gerrit Dashboard: QTBUG-123551
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            hitoshiito Hitoshi Ito
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes